--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.2",
     "is-empty": "^1.2.0",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.1",
     "validator": "^13.7.0"
